
GKDBus_sources = [
	'arguments/GKDBusArgument.cpp',
	'arguments/GKDBusArgument.hpp',
	'arguments/GKDBusArgString.cpp',
	'arguments/GKDBusArgString.hpp',
	'arguments/GKDBusArgBoolean.cpp',
	'arguments/GKDBusArgBoolean.hpp',
	'arguments/GKDBusArgByte.cpp',
	'arguments/GKDBusArgByte.hpp',
	'arguments/GKDBusArgUInt16.cpp',
	'arguments/GKDBusArgUInt16.hpp',
	'arguments/GKDBusArgUInt64.cpp',
	'arguments/GKDBusArgUInt64.hpp',
	'arguments/GKDBusArgGKeysID.cpp',
	'arguments/GKDBusArgGKeysID.hpp',
	'arguments/GKDBusArgGKeysIDArray.cpp',
	'arguments/GKDBusArgGKeysIDArray.hpp',
	'arguments/GKDBusArgMKeysID.cpp',
	'arguments/GKDBusArgMKeysID.hpp',
	'arguments/GKDBusArgMKeysIDArray.cpp',
	'arguments/GKDBusArgMKeysIDArray.hpp',
	'arguments/GKDBusArgMacro.cpp',
	'arguments/GKDBusArgMacro.hpp',
	'arguments/GKDBusArgMacrosBank.cpp',
	'arguments/GKDBusArgMacrosBank.hpp',
	'arguments/GKDBusArgDevicesMap.cpp',
	'arguments/GKDBusArgDevicesMap.hpp',
	'arguments/GKDBusArgLCDPluginsArray.cpp',
	'arguments/GKDBusArgLCDPluginsArray.hpp',
	'messages/GKDBusMessage.cpp',
	'messages/GKDBusMessage.hpp',
	'messages/GKDBusReply.cpp',
	'messages/GKDBusReply.hpp',
	'messages/GKDBusErrorReply.cpp',
	'messages/GKDBusErrorReply.hpp',
	'messages/GKDBusRemoteMethodCall.cpp',
	'messages/GKDBusRemoteMethodCall.hpp',
	'messages/GKDBusBroadcastSignal.cpp',
	'messages/GKDBusBroadcastSignal.hpp',
	'messages/GKDBusAsyncContainer.cpp',
	'messages/GKDBusAsyncContainer.hpp',
	'events/callback.hpp',
	'events/callbackEvent.hpp',
	'events/GKDBusEvent.cpp',
	'events/GKDBusEvent.hpp',
	'events/SIGas2v.cpp',
	'events/SIGas2v.hpp',
	'events/SIGs2as.cpp',
	'events/SIGs2as.hpp',
	'events/SIGs2b.cpp',
	'events/SIGs2b.hpp',
	'events/SIGs2s.cpp',
	'events/SIGs2s.hpp',
	'events/SIGs2v.cpp',
	'events/SIGs2v.hpp',
	'events/SIGsm2v.cpp',
	'events/SIGsm2v.hpp',
	'events/SIGsG2v.cpp',
	'events/SIGsG2v.hpp',
	'events/SIGsGM2v.cpp',
	'events/SIGsGM2v.hpp',
	'events/SIGsmG2b.cpp',
	'events/SIGsmG2b.hpp',
	'events/SIGss2aG.cpp',
	'events/SIGss2aG.hpp',
	'events/SIGss2am.cpp',
	'events/SIGss2am.hpp',
	'events/SIGss2aP.cpp',
	'events/SIGss2aP.hpp',
	'events/SIGss2b.cpp',
	'events/SIGss2b.hpp',
	'events/SIGss2s.cpp',
	'events/SIGss2s.hpp',
	'events/SIGss2v.cpp',
	'events/SIGss2v.hpp',
	'events/SIGssyt2b.cpp',
	'events/SIGssyt2b.hpp',
	'events/SIGssyyy2b.cpp',
	'events/SIGssyyy2b.hpp',
	'events/SIGv2v.cpp',
	'events/SIGv2v.hpp',
	'GKDBusConnection.hpp',
	'GKDBus.cpp',
	'GKDBus.hpp',
	'GKDBusEvents.cpp',
	'GKDBusEvents.hpp',
]

GKDBus_lib = library(
	'GKDBus',
	GKDBus_sources,
	include_directories : inc,
	dependencies : [
		dbus_dep,
		GKUtils_lib_dep,
	],
	version : '0.0.0',
	soversion : '0',
	install : true,
)


GKDBus_lib_dep = declare_dependency(
	link_with: GKDBus_lib,
	dependencies : [
		dbus_dep,
	]
)
