
GKDBus_sources = [
	'ArgTypes/ArgBase.cpp',
	'ArgTypes/ArgBase.hpp',
	'ArgTypes/TypeBase.cpp',
	'ArgTypes/TypeBase.hpp',
	'ArgTypes/boolean.cpp',
	'ArgTypes/boolean.hpp',
	'ArgTypes/string.cpp',
	'ArgTypes/string.hpp',
	'ArgTypes/stringArray.cpp',
	'ArgTypes/stringArray.hpp',
	'ArgTypes/int32.cpp',
	'ArgTypes/int32.hpp',
	'ArgTypes/uint16.cpp',
	'ArgTypes/uint16.hpp',
	'ArgTypes/uint32.cpp',
	'ArgTypes/uint32.hpp',
	'ArgTypes/uint64.cpp',
	'ArgTypes/uint64.hpp',
	'ArgTypes/uint8.cpp',
	'ArgTypes/uint8.hpp',
	'ArgTypes/GKeysID.cpp',
	'ArgTypes/GKeysID.hpp',
	'ArgTypes/GKeysIDArray.cpp',
	'ArgTypes/GKeysIDArray.hpp',
	'ArgTypes/MKeysID.cpp',
	'ArgTypes/MKeysID.hpp',
	'ArgTypes/MKeysIDArray.cpp',
	'ArgTypes/MKeysIDArray.hpp',
	'ArgTypes/macro.cpp',
	'ArgTypes/macro.hpp',
	'ArgTypes/DevicesMap.cpp',
	'ArgTypes/DevicesMap.hpp',
	'ArgTypes/LCDPPArray.cpp',
	'ArgTypes/LCDPPArray.hpp',
	'ArgTypes/DepsMap.cpp',
	'ArgTypes/DepsMap.hpp',
	'messages/GKDBusMessage.cpp',
	'messages/GKDBusMessage.hpp',
	'messages/GKDBusReply.cpp',
	'messages/GKDBusReply.hpp',
	'messages/GKDBusErrorReply.cpp',
	'messages/GKDBusErrorReply.hpp',
	'messages/GKDBusRemoteMethodCall.cpp',
	'messages/GKDBusRemoteMethodCall.hpp',
	'messages/GKDBusBroadcastSignal.cpp',
	'messages/GKDBusBroadcastSignal.hpp',
	'messages/GKDBusAsyncContainer.cpp',
	'messages/GKDBusAsyncContainer.hpp',
	'events/callback.cpp',
	'events/callback.hpp',
	'events/callbackEvent.hpp',
	'events/GKDBusEvent.cpp',
	'events/GKDBusEvent.hpp',
	'events/SIGas2v.cpp',
	'events/SIGas2v.hpp',
	'events/SIGb2v.cpp',
	'events/SIGb2v.hpp',
	'events/SIGq2v.cpp',
	'events/SIGq2v.hpp',
	'events/SIGs2as.cpp',
	'events/SIGs2as.hpp',
	'events/SIGs2b.cpp',
	'events/SIGs2b.hpp',
	'events/SIGs2D.cpp',
	'events/SIGs2D.hpp',
	'events/SIGs2s.cpp',
	'events/SIGs2s.hpp',
	'events/SIGs2v.cpp',
	'events/SIGs2v.hpp',
	'events/SIGsm2v.cpp',
	'events/SIGsm2v.hpp',
	'events/SIGsG2v.cpp',
	'events/SIGsG2v.hpp',
	'events/SIGsGM2v.cpp',
	'events/SIGsGM2v.hpp',
	'events/SIGss2aG.cpp',
	'events/SIGss2aG.hpp',
	'events/SIGss2am.cpp',
	'events/SIGss2am.hpp',
	'events/SIGss2aP.cpp',
	'events/SIGss2aP.hpp',
	'events/SIGss2b.cpp',
	'events/SIGss2b.hpp',
	'events/SIGss2s.cpp',
	'events/SIGss2s.hpp',
	'events/SIGss2v.cpp',
	'events/SIGss2v.hpp',
	'events/SIGssyt2b.cpp',
	'events/SIGssyt2b.hpp',
	'events/SIGssyyy2b.cpp',
	'events/SIGssyyy2b.hpp',
	'events/SIGv2v.cpp',
	'events/SIGv2v.hpp',
	'GKDBusConnection.hpp',
	'GKDBus.cpp',
	'GKDBus.hpp',
	'GKDBusEvents.cpp',
	'GKDBusEvents.hpp',
]

GKDBus_lib = library(
	'GKDBus',
	GKDBus_sources,
	include_directories : inc,
	dependencies : [
		dbus_dep,
		GKUtils_lib_dep,
	],
	version : '0.0.0',
	soversion : '0',
	install : true,
)


GKDBus_lib_dep = declare_dependency(
	link_with: GKDBus_lib,
	dependencies : [
		dbus_dep,
	]
)
