
lib_LTLIBRARIES = libGLogiKUtils.la

libGLogiKUtils_la_CXXFLAGS = \
				@AM_CXXFLAGS@ \
				@BOOST_CPPFLAGS@

libGLogiKUtils_la_LDFLAGS = \
				@AM_LDFLAGS@ \
				@BOOST_LDFLAGS@

libGLogiKUtils_la_LIBADD = \
				@BOOST_SYSTEM_LIB@ \
				@BOOST_FILESYSTEM_LIB@

libGLogiKUtils_la_SOURCES = \
	%D%/randomGenerator.cpp \
	%D%/randomGenerator.h \
	%D%/filesystem.cpp \
	%D%/filesystem.h \
	%D%/functions.cpp \
	%D%/functions.h \
	%D%/exception.cpp \
	%D%/exception.h \
	%D%/XDGUserDirs.cpp \
	%D%/XDGUserDirs.h \
	%D%/log.h \
	%D%/utils.h
